# visualization-course

./: .gitignore
A1/: Readme.md  assignment1.html  index.html  package-lock.json  package.json
A1/data/: iris.csv
A1/js/: assignment1.js
A2/: index.html  index.js  package-lock.json  package.json
A2/data/: reduced_daily_climate_summary.csv
A3/: Instructions.md  how.md  what.md  why.md
A4/: brush.js  index.html  index.js  package-lock.json  package.json  plots.js  style.css
A5/: index.html  index.js  linechart.js  treemap.js
A5/src/: icicle.js
A6/: index.html  index.js  package-lock.json  package.json  wordcloud.js  wordvector.js
A6/src/: movies.js
ExSciVis2022_part1_tozip/: CMakeLists.txt  README.md
ExSciVis2022_part1_tozip/source/: CMakeLists.txt  ray_casting.cpp
ExSciVis2022_part1_tozip/source/shader/: ray_casting.frag
ExSciVis2022_part2_tozip/: CMakeLists.txt  README.md
ExSciVis2022_part2_tozip/data/TFs/: TF6
ExSciVis2022_part2_tozip/framework/: utils.cpp  utils.hpp
ExSciVis2022_part2_tozip/source/: CMakeLists.txt  ray_casting.cpp
ExSciVis2022_part2_tozip/source/shader/: ray_casting.frag
